JDT code tidy-up